# kaldera

./: .gitmodules  CREDITS  Cargo.toml  LICENSE  Makefile  README.md
data/: fullscreen.frag  fullscreen.frag.spv  fullscreen.vert.spv  triangle.closesthit.rchit.spv  triangle.frag  triangle.vert  triangle.vert.spv
data/shaders/: blit.frag.spv  blit.vert.spv  fullscreen.frag.spv  fullscreen.vert  fullscreen.vert.spv  raster.triangle.frag.spv  raster.triangle.vert  ray.closesthit.rchit  ray.closesthit.rchit.spv  ray.common.glsl  ray.common.payload.glsl  ray.common.random.glsl  ray.common.scatter.glsl  ray.miss.rmiss  ray.procedural.rchit  ray.procedural.rchit.spv  ray.procedural.rint  ray.procedural.rint.spv  ray.rgen  ray.rgen.spv  ray.rmiss  ray.rmiss.spv  ray.shadow.rmiss  ray.shadow.rmiss.spv  ray.triangles.rahit  ray.triangles.rahit.spv  ray.triangles.rchit  ray.triangles.rchit.spv  triangle.closesthit.rchit  triangle.closesthit.rchit.spv  triangle.miss.rmiss.spv  triangle.raygen.rgen.spv  triangle.vert  triangle.vert.spv
src/: lib.rs  main.rs
src/base/: camera.rs  geometry.rs  input.rs  mod.rs  model.rs  scene.rs
src/base/camera/: camera.rs  freelook.rs  mod.rs  orbital.rs
src/base/input/: mod.rs  (+3 more)
src/cores/: input.rs  mod.rs
src/dispatch/: dispatch.rs  executor.rs  mod.rs
src/ffi/: mod.rs
src/vk/: debug.rs  device.rs  device_queues.rs  error.rs  geometry.rs  geometry_ext.rs  graphics.rs  image.rs  instance.rs  memory.rs  mod.rs  model.rs  offscreen.rs  pipeline.rs  queue_submit.rs  raytrace.rs  render.rs  scene.rs  staging.rs  surface.rs  swapchain.rs
(+29 files in other folders)
