[package]
name = "kaldera"
version = "0.1.0"
authors = ["Keitaro Oguri <ogukei256@gmail.com>"]
edition = "2018"

[dependencies]
libc = "*"
nalgebra-glm = { optional = true, version = "*" }
gltf = { optional = true, version = "*" }

[features]
default = ["with-nalgebra", "with-gltf"]

with-nalgebra = ["nalgebra-glm"]
with-gltf = ["gltf"]
